reduce text size to avoid overlapping

--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,8 @@ nav{
 	-moz-box-shadow:0 1px 1px #333333;
 	-webkit-box-shadow:0 1px 1px #333333;
 	box-shadow:0 1px 1px #333333;
+
+    font-size: 75%;
 }
 
 /* The clearfix hack to clear the floats: */
